--- a/app/views/profiles/index.html.haml
+++ b/app/views/profiles/index.html.haml
@@ -21,9 +21,9 @@
               %td= profile.name
               %td= profile.country_code
               %td
-                -if profile.user
+                -if profile.belongs_to_user?
                   %i.fa.fa-user
               %td= link_to 'Show', profile_path(profile)
               %td
-                - if current_user.has_role?(:admin) && profile.user
-                  = link_to 'Masquerade', new_user_masquerades_path(profile.user)
+                - if current_user.has_role?(:admin) && profile.owner && profile.belongs_to_user?
+                  = link_to 'Masquerade', new_user_masquerades_path(profile.owner)
