--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -84,16 +84,21 @@
           = lang_menu
 
 - content_for :page_js do
-  :coffeescript
-    $('.sign-in-form').validate(
-      rules:
-        'user[email]':
+  :javascript
+    $('.sign-in-form').validate({
+      rules: {
+        'user[email]': {
           required: true,
           email: true
-        'user[password]':
+        },
+        'user[password]': {
           required: true
-      highlight: (element) ->
-        $(element).closest('.form-group').addClass('has-error')
-      unhighlight: (element) ->
-        $(element).closest('.form-group').removeClass('has-error')
-    )
+        }
+      },
+      highlight: function(element) {
+        $(element).closest('.form-group').addClass('has-error');
+      },
+      unhighlight: function(element) {
+        $(element).closest('.form-group').removeClass('has-error');
+      }
+    });
