--- a/app/views/tournaments/_form.html.haml
+++ b/app/views/tournaments/_form.html.haml
@@ -14,44 +14,72 @@
               = msg
 
       .form-group
-        = f.label :name, class: 'control-label col-sm-4'
-        .col-sm-8
+        = f.label :name, class: 'control-label col-sm-2'
+        .col-sm-10
           = f.text_field :name, class: 'form-control'
 
       .form-group
-        = f.label :starts_at, class: 'control-label col-sm-4'
-        .col-sm-8
+        = f.label :starts_at, class: 'control-label col-sm-2'
+        .col-sm-10
           = f.text_field :starts_at, class: 'form-control datepicker'
 
       .form-group
-        = f.label :finish_start_lat, class: 'control-label col-sm-4'
-        .col-sm-8
-          = f.text_field :finish_start_lat, class: 'form-control'
+        %label.col-sm-12
+          Exit point
 
       .form-group
-        = f.label :finish_start_lon, class: 'control-label col-sm-4'
-        .col-sm-8
-          = f.text_field :finish_start_lon, class: 'form-control'
+        .form-inline
+          = f.label 'Latitude', for: :exit_lat, class: 'control-label col-sm-2'
+          .col-sm-10
+            = f.text_field :exit_lat, class: 'form-control'
+
+            = f.label 'Longitude', for: :exit_lon, class: 'control-label'
+            = f.text_field :exit_lon, class: 'form-control'
 
       .form-group
-        = f.label :finish_end_lat, class: 'control-label col-sm-4'
-        .col-sm-8
-          = f.text_field :finish_end_lat, class: 'form-control'
+        %label.col-sm-12
+          Finish line
 
       .form-group
-        = f.label :finish_end_lon, class: 'control-label col-sm-4'
-        .col-sm-8
-          = f.text_field :finish_end_lon, class: 'form-control'
+        .form-inline
+          = f.label 'Start lat', for: :finish_start_lat, class: 'control-label col-sm-2'
+          .col-sm-10
+            = f.text_field :finish_start_lat, class: 'form-control'
+
+            = f.label 'Start lon', for: :finish_start_lon, class: 'control-label'
+            = f.text_field :finish_start_lon, class: 'form-control'
 
       .form-group
-        = f.label :exit_lat, class: 'control-label col-sm-4'
-        .col-sm-8
-          = f.text_field :exit_lat, class: 'form-control'
+        .form-inline
+          = f.label 'End lat', for: :finish_end_lat, class: 'control-label col-sm-2'
+          .col-sm-10
+            = f.text_field :finish_end_lat, class: 'form-control'
+
+            = f.label 'End lon', for: :finish_end_lon, class: 'control-label'
+            = f.text_field :finish_end_lon, class: 'form-control'
 
       .form-group
-        = f.label :exit_lon, class: 'control-label col-sm-4'
-        .col-sm-8
-          = f.text_field :exit_lon, class: 'form-control'
+        = f.label 'Distance from exit', class: 'control-label col-sm-2'
+        .col-sm-10
+          %p#distance-from-exit.form-control-static
+
+      .form-group
+        %label.col-sm-12
+          Finish line params
+
+      .form-group
+        .form-inline
+          = f.label 'Center lat', for: :finish_center_lat, class: 'control-label col-sm-2'
+          .col-sm-10
+            = text_field_tag :finish_center_lat, nil, class: 'form-control'
+
+            = f.label 'Center lon', for: :finish_center_lon, class: 'control-label'
+            = text_field_tag :finish_center_lon, nil, class: 'form-control'
+
+      .form-group
+        = f.label 'Length', for: :finish_line_length, class: 'control-label col-sm-2'
+        .col-sm-4
+          = number_field_tag :finish_line_length, nil, class: 'form-control'
 
       .col-sm-offset-4.col-sm-8
         = f.submit nil, class: 'btn btn-primary'
