--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,6 +31,7 @@
 @import './blocks/**/*';
 @import './events/**/*';
 @import './tracks/**/*';
+@import './tournaments/**/*';
 
 html, body {
   height: 100%;
