refactored create-result cell styles

--- a/app/views/events/scoreboards/_hungary_boogie.html.haml
+++ b/app/views/events/scoreboards/_hungary_boogie.html.haml
@@ -85,7 +85,7 @@
                               'data-params': { 'event_track[competitor_id]' => competitor.id,
                                                'event_track[round_id]' => round.id,
                                                display_raw_results: display_raw_results }.to_param,
-                              class: 'create-result',
+                              class: 'create-result-cell__link',
                               rel: 'nofollow' do
                       %i.fa.fa-upload
 
