--- a/app/views/events/scoreboards/_hungary_boogie.html.haml
+++ b/app/views/events/scoreboards/_hungary_boogie.html.haml
@@ -18,7 +18,7 @@
       %tr#rounds-row
         - @event.rounds_by_discipline.each do |discipline, rounds|
           - rounds.each do |round|
-            %td.round-cell.text-center
+            %td.round-cell
               = round.name
               - if policy(@event).update? && !@event.finished?
                 = button_to event_round_path(@event, round),
