--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -52,7 +52,7 @@
           %li.dropdown
             %a.dropdown-toggle{href: '#', data: {toggle: 'dropdown'}}
               =t 'application.header.sign_in'
-              %i.fa.fa-caret-down'
+              %i.fa.fa-caret-down
             %ul.dropdown-menu.login-menu
               %li
                 .row
