changed input type to text

--- a/app/views/tournaments/qualification_jumps/_edit_form_modal.html.haml
+++ b/app/views/tournaments/qualification_jumps/_edit_form_modal.html.haml
@@ -27,12 +27,12 @@
         .form-group
           = f.label :result, class: 'control-label col-sm-4'
           .col-sm-8
-            = f.number_field :result, class: 'form-control'
+            = f.text_field :result, class: 'form-control'
 
         .form-group
           = f.label :canopy_time, class: 'control-label col-sm-4'
           .col-sm-8
-            = f.number_field :canopy_time, class: 'form-control'
+            = f.text_field :canopy_time, class: 'form-control'
 
 
       .modal-footer
