added bracket size and destroying matches

--- a/app/views/tournaments/_form.html.haml
+++ b/app/views/tournaments/_form.html.haml
@@ -24,6 +24,12 @@
           = f.text_field :starts_at, class: 'form-control datepicker'
 
       .form-group
+        = f.label :bracket_size, class: 'control-label col-sm-2'
+        .col-sm-10
+          = f.text_field :bracket_size, class: 'form-control'
+
+
+      .form-group
         %label.col-sm-12
           Exit point
 
