--- a/app/views/tournaments/_header.html.haml
+++ b/app/views/tournaments/_header.html.haml
@@ -12,8 +12,9 @@
 .row
   .col-sm-12
     - controller_path = controller.controller_path
-    = link_to tournament_path(@tournament), class: ['btn-flat btn-tab', ('active' if controller_path == 'tournaments')] do
-      Scoreboard
+    - if policy(@tournament).update? || @tournament.rounds.any?
+      = link_to tournament_path(@tournament), class: ['btn-flat btn-tab', ('active' if controller_path == 'tournaments')] do
+        Scoreboard
     - if @tournament.with_qualification?
       = link_to tournament_qualification_path(@tournament), class: ['btn-flat btn-tab', ('active' if controller_path == 'tournaments/qualifications')] do
         Qualification
