--- a/app/views/tracks/edit.html.haml
+++ b/app/views/tracks/edit.html.haml
@@ -112,8 +112,9 @@
 
 
         .form-group
-          .col-sm-4
-            %div#alert-placeholder
+          .col-sm-6.col-sm-offset-3
+            Download file:
+            = link_to @track.track_file.file_file_name, track_download_path(@track), 'data-turbolinks': false
 
         %hr
         .row
