--- a/app/assets/stylesheets/_tournaments.scss
+++ b/app/assets/stylesheets/_tournaments.scss
@@ -21,23 +21,43 @@
   margin-bottom: 8px;
 }
 
-.tournament-competitor a,
-.qualification-table a {
+.tournament-competitor a {
   color: rgb(51, 51, 51);
   border-bottom-style: dotted;
   border-bottom-width: 1.1px;
 }
 
-.tournament-competitor a:hover,
-.qualification-table a:hover {
+.tournament-competitor a:hover {
   border-bottom-style: solid;
   text-decoration: none;
 }
 
 
-.qualification-table tr > td:nth-child(1) {
-  width: 5%;
+.qualification-table a {
+  color: rgb(51, 51, 51);
 }
+
+.qualification-table {
+  margin-top: 15px;
+}
+
+.qualification-table tr > td:nth-child(1) {
+  max-width: 50px;
+  text-align: center;
+}
+
+.qualification-table tr td {
+  width: 2%;
+}
+
+.qualification-table__competitor {
+  min-width: 130px;
+}
+
+.qualification-table__best-result {
+  box-shadow: 6px 0 5px -2px rgba(0, 0, 0, 0.15);
+}
+
 .competitors-container {
   padding-bottom: 7px;
   padding-top: 2px;
