centered header labels

--- a/app/views/tournaments/qualifications/_qualification_table.html.haml
+++ b/app/views/tournaments/qualifications/_qualification_table.html.haml
@@ -25,9 +25,9 @@
                       = t('general.delete')
     %tr
       - @tournament.qualification_rounds.each do |round|
-        %td
+        %td.text-center
           Result
-        %td
+        %td.text-center
           Canopy
 
   %tbody
