destroy qualification jumps

--- a/app/views/tournaments/qualification_jumps/_edit_form_modal.html.haml
+++ b/app/views/tournaments/qualification_jumps/_edit_form_modal.html.haml
@@ -36,5 +36,11 @@
 
 
       .modal-footer
+        = link_to t('general.delete'),
+                  tournament_qualification_jump_path(@tournament, @qualification_jump),
+                  remote: true,
+                  method: :delete,
+                  class: 'btn btn-danger pull-left'
+
         = f.submit t('general.save'), class: 'btn btn-primary', 'data-disable-with': t('general.saving')
         %button.btn.btn-default{type: 'button', data: {dismiss: 'modal'}}= t 'general.cancel'
