fixed creating qualification result from existent track, changed confirmation message

--- a/app/views/tournaments/qualification_jumps/_edit_form_modal.html.haml
+++ b/app/views/tournaments/qualification_jumps/_edit_form_modal.html.haml
@@ -40,6 +40,7 @@
                   tournament_qualification_jump_path(@tournament, @qualification_jump),
                   remote: true,
                   method: :delete,
+                  data: {confirm: 'Are you sure you want to delete this record?'},
                   class: 'btn btn-danger pull-left'
 
         = f.submit t('general.save'), class: 'btn btn-primary', 'data-disable-with': t('general.saving')
