--- a/app/views/tournaments/_form.html.haml
+++ b/app/views/tournaments/_form.html.haml
@@ -19,6 +19,14 @@
           = f.text_field :name, class: 'form-control'
 
       .form-group
+        = f.label :place, class: 'control-label col-sm-2'
+        .col-sm-10
+          = f.select :place_id,
+                     options_for_select([[@tournament.place_name, @tournament.place_id]], @tournament.place_id), 
+                     { include_blank: true },
+                     class: 'form-control'
+
+      .form-group
         = f.label :starts_at, class: 'control-label col-sm-2'
         .col-sm-10
           = f.text_field :starts_at, class: 'form-control datepicker'
