custom devise mailer, templates, preview, layout improvements

--- a/app/views/layouts/mailer.html.haml
+++ b/app/views/layouts/mailer.html.haml
@@ -42,7 +42,7 @@
 
     = yield :email_style
 
-  %body{style: 'background-color: #e5ecf1;'}
+  %body{style: "background-color: #fafafa; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;"}
     %table{border: '0', cellpadding: '0', cellspacing: '0', style: 'margin: 0; padding: 0; padding-top: 25px;', width: '100%'}
       %tr
         %td{align: 'center', valign: 'top'}
@@ -59,13 +59,13 @@
 
           %table.100p{width: '640', cellspacing: '0', cellpadding: '0', bgcolor: '#'}
             %tr
-              %td.100p{bgcolor: '#fff', width: '640', valign: 'top', style: 'padding: 15px; color: #333;'}
+              %td.100p{bgcolor: '#fff', width: '640', valign: 'top', style: 'padding: 15px; color: #333; border-left: #ccc solid 1px; border-right: #ccc solid 1px;'}
                 = yield
 
           %table.100p{width: '640', cellspacing: '0', cellpadding: '0', bgcolor: '#'}
             %tr
               %td.100p{bgcolor: '#6189af', width: '640', valign: 'top', style: 'color: #fff; padding: 15px;'}
-                %div
+                %div{style: 'line-height: 1.4; font-size: 13px;'}
                   Skyderby
                   %br
                   info@skyderby.ru
