added reset password mail, cleanup

--- a/app/views/devise_mailer/reset_password_instructions.html.haml
+++ b/app/views/devise_mailer/reset_password_instructions.html.haml
@@ -1,8 +1,31 @@
-%p= t('devise.mailer.reset_password_instructions.greeting', recipient: @resource.email)
+:ruby
+  button_style = <<~STYLE
+    color: #fff;
+    background-color: #5cb85c;
+    border: 1px solid #4cae4c;
+    border-radius: 2px;
+    display: inline-block;
+    padding: 10px 16px;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.4;
+    text-decoration: none;
+    text-align: center;
+    vertical-align: middle;
+  STYLE
 
-%p= t('devise.mailer.reset_password_instructions.instruction')
+%div{style: 'text-align: center; font-size: 20px;'}
+  %p
+    Forgot your password?
+    %br 
+    No problem. Let's get you a new one.
 
-%p= link_to t('devise.mailer.reset_password_instructions.action'), edit_password_url(@resource, reset_password_token: @token)
+  %p
+    = link_to 'Reset Your Password',
+              edit_password_url(@resource, reset_password_token: @token),
+              style: button_style
 
-%p= t('devise.mailer.reset_password_instructions.instruction_2')
-%p= t('devise.mailer.reset_password_instructions.instruction_3')
+%p{style: 'margin-top: 50px;'}
+  If you didn't request this, please ignore this email.
+  %br
+  Your password won't change until you access the button above and create a new one.
