--- a/app/views/layouts/mailer.html.haml
+++ b/app/views/layouts/mailer.html.haml
@@ -59,7 +59,7 @@
 
           %table.100p{width: '640', cellspacing: '0', cellpadding: '0', bgcolor: '#'}
             %tr
-              %td.100p{bgcolor: '#fff', width: '640', valign: 'top', style: 'padding: 15px; color: #333; border-left: #ccc solid 1px; border-right: #ccc solid 1px;'}
+              %td.100p{bgcolor: '#fff', width: '640', valign: 'top', style: 'padding: 15px; color: #333; border-left: #ccc solid 1px; border-right: #ccc solid 1px; line-height: 1.4;'}
                 = yield
 
           %table.100p{width: '640', cellspacing: '0', cellpadding: '0', bgcolor: '#'}
